--- a/index.html
+++ b/index.html
@@ -13,33 +13,11 @@
     </div>
     <div class="imcompleted-area">
       <h3 class="title">未完了のTODO一覧</h3>
-      <ul id="imcompleted-list">
-        <li class="list-row">
-          <div>
-            <p>TODOです。</p>
-            <button>追加</button>
-            <button>削除</button>
-          </div>
-        </li>
-        <li class="list-row">
-          <div>
-            <p>TODOです。</p>
-            <button>追加</button>
-            <button>削除</button>
-          </div>
-        </li>
-      </ul>
+      <ul id="imcompleted-list"></ul>
     </div>
     <div class="completed-area">
       <h3 class="title">完了のTODO一覧</h3>
-      <ul>
-        <li class="list-row">
-          <div>
-            <p>TODOです。</p>
-            <button>戻す</button>
-          </div>
-        </li>
-      </ul>
+      <ul></ul>
     </div>
     <script src="src/index.js"></script>
   </body>
