--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="completed-area">
       <h3 class="title">完了のTODO一覧</h3>
-      <ul></ul>
+      <ul id="completed-list"></ul>
     </div>
     <script src="src/index.js"></script>
   </body>
