--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <input id="add-text" type="text" placeholder="TODOを入力" />
       <button id="add-button">追加</button>
     </div>
-    <div class="imcompleted-area">
+    <div class="incompleted-area">
       <h3 class="title">未完了のTODO一覧</h3>
-      <ul id="imcompleted-list"></ul>
+      <ul id="incompleted-list"></ul>
     </div>
     <div class="completed-area">
       <h3 class="title">完了のTODO一覧</h3>
